--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -75,6 +75,7 @@
     <file>ui/modules/Common/Styles/qmldir</file>
     <file>ui/modules/Common/Styles/SearchBoxStyle.qml</file>
     <file>ui/modules/Common/View/ScrollableListView.qml</file>
+    <file>ui/modules/Linphone/Call/CallControls.qml</file>
     <file>ui/modules/Linphone/Chat/Chat.qml</file>
     <file>ui/modules/Linphone/Chat/Event.qml</file>
     <file>ui/modules/Linphone/Chat/IncomingMessage.qml</file>
