--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -51,6 +51,8 @@
     <file>ui/modules/Common/InvertedMouseArea.qml</file>
     <file>ui/modules/Common/Menu.qml</file>
     <file>ui/modules/Common/Paned.qml</file>
+    <file>ui/modules/Common/Popup/AbstractDropDownMenu.qml</file>
+    <file>ui/modules/Common/Popup/DropDownDynamicMenu.qml</file>
     <file>ui/modules/Common/Popup/DropDownMenu.qml</file>
     <file>ui/modules/Common/Popup/PopupShadow.qml</file>
     <file>ui/modules/Common/qmldir</file>
