--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -53,6 +53,7 @@
     <file>ui/modules/Common/Menu/Menu.qml</file>
     <file>ui/modules/Common/Paned.qml</file>
     <file>ui/modules/Common/Popup/AbstractDropDownMenu.qml</file>
+    <file>ui/modules/Common/Popup/DesktopPopup.qml</file>
     <file>ui/modules/Common/Popup/DropDownDynamicMenu.qml</file>
     <file>ui/modules/Common/Popup/DropDownMenu.qml</file>
     <file>ui/modules/Common/Popup/PopupShadow.qml</file>
