--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -12,6 +12,9 @@
     <file>assets/images/chevron_red.svg</file>
     <file>assets/images/chevron_white.svg</file>
     <file>assets/images/collapse.svg</file>
+    <file>assets/images/contact_edit_hovered.svg</file>
+    <file>assets/images/contact_edit_normal.svg</file>
+    <file>assets/images/contact_edit_pressed.svg</file>
     <file>assets/images/contact_normal.svg</file>
     <file>assets/images/contact_selected.svg</file>
     <file>assets/images/delete_hovered.svg</file>
@@ -143,6 +146,7 @@
     <file>ui/views/App/NewCall.qml</file>
     <file>ui/views/App/qmldir</file>
     <file>ui/views/App/Styles/MainWindow/ContactsStyle.qml</file>
+    <file>ui/views/App/Styles/MainWindow/ConversationStyle.qml</file>
     <file>ui/views/App/Styles/MainWindow/MainWindowStyle.qml</file>
     <file>ui/views/App/Styles/qmldir</file>
   </qresource>
