--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -40,6 +40,7 @@
     <file>assets/images/lost_outgoing_call.svg</file>
     <file>assets/images/outgoing_call.svg</file>
     <file>assets/images/search.svg</file>
+    <file>assets/images/tooltip_arrow.svg</file>
     <file>assets/images/video_call_hovered.svg</file>
     <file>assets/images/video_call_normal.svg</file>
     <file>assets/images/video_call_pressed.svg</file>
@@ -99,6 +100,9 @@
     <file>ui/modules/Common/Styles/PopupStyle.qml</file>
     <file>ui/modules/Common/Styles/qmldir</file>
     <file>ui/modules/Common/Styles/SearchBoxStyle.qml</file>
+    <file>ui/modules/Common/Styles/TooltipStyle.qml</file>
+    <file>ui/modules/Common/Tooltip/TooltipArea.qml</file>
+    <file>ui/modules/Common/Tooltip/Tooltip.qml</file>
     <file>ui/modules/Common/View/ScrollableListView.qml</file>
     <file>ui/modules/Linphone/Account/AccountStatus.qml</file>
     <file>ui/modules/Linphone/Call/CallControls.qml</file>
