--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -148,6 +148,7 @@
     <file>ui/views/App/ManageAccounts.qml</file>
     <file>ui/views/App/NewCall.qml</file>
     <file>ui/views/App/qmldir</file>
+    <file>ui/views/App/Styles/Calls/CallsStyle.qml</file>
     <file>ui/views/App/Styles/MainWindow/ContactsStyle.qml</file>
     <file>ui/views/App/Styles/MainWindow/ConversationStyle.qml</file>
     <file>ui/views/App/Styles/MainWindow/MainWindowStyle.qml</file>
