feat(components/chat): remove properly end call event

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -27,7 +27,7 @@
     <file>assets/images/delete_hovered.svg</file>
     <file>assets/images/delete_normal.svg</file>
     <file>assets/images/delete_pressed.svg</file>
-    <file>assets/images/end_call.svg</file>
+    <file>assets/images/ended_call.svg</file>
     <file>assets/images/filter.svg</file>
     <file>assets/images/history.svg</file>
     <file>assets/images/home_normal.svg</file>
