feat(ui/modules/Common/Image/RoundedImage): supports color mask

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -4,9 +4,11 @@
     <file>assets/images/attachment_normal.svg</file>
     <file>assets/images/attachment_pressed.svg</file>
     <file>assets/images/auto_answer.svg</file>
+    <file>assets/images/a-v-a-t-a-r-120120@3x.png</file>
     <file>assets/images/call_hovered.svg</file>
     <file>assets/images/call_normal.svg</file>
     <file>assets/images/call_pressed.svg</file>
+    <file>assets/images/cat.jpg</file>
     <file>assets/images/chat_error.svg</file>
     <file>assets/images/chat_hovered.svg</file>
     <file>assets/images/chat_normal.svg</file>
