--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -4,11 +4,12 @@
     <file>assets/images/attachment_normal.svg</file>
     <file>assets/images/attachment_pressed.svg</file>
     <file>assets/images/auto_answer.svg</file>
-    <file>assets/images/a-v-a-t-a-r-120120@3x.png</file>
+    <file>assets/images/call_accept_hovered.svg</file>
+    <file>assets/images/call_accept_normal.svg</file>
+    <file>assets/images/call_accept_pressed.svg</file>
     <file>assets/images/call_hovered.svg</file>
     <file>assets/images/call_normal.svg</file>
     <file>assets/images/call_pressed.svg</file>
-    <file>assets/images/cat.jpg</file>
     <file>assets/images/chat_error.svg</file>
     <file>assets/images/chat_hovered.svg</file>
     <file>assets/images/chat_normal.svg</file>
@@ -31,6 +32,9 @@
     <file>assets/images/delete_pressed.svg</file>
     <file>assets/images/ended_call.svg</file>
     <file>assets/images/filter.svg</file>
+    <file>assets/images/hangup_hovered.svg</file>
+    <file>assets/images/hangup_normal.svg</file>
+    <file>assets/images/hangup_pressed.svg</file>
     <file>assets/images/history.svg</file>
     <file>assets/images/home_normal.svg</file>
     <file>assets/images/home_selected.svg</file>
@@ -48,6 +52,9 @@
     <file>assets/images/tooltip_arrow_left.svg</file>
     <file>assets/images/tooltip_arrow_right.svg</file>
     <file>assets/images/tooltip_arrow_top.svg</file>
+    <file>assets/images/video_call_accept_hovered.svg</file>
+    <file>assets/images/video_call_accept_normal.svg</file>
+    <file>assets/images/video_call_accept_pressed.svg</file>
     <file>assets/images/video_call_hovered.svg</file>
     <file>assets/images/video_call_normal.svg</file>
     <file>assets/images/video_call_pressed.svg</file>
@@ -149,8 +156,8 @@
     <file>ui/scripts/Utils/utils.js</file>
     <file>ui/views/App/Calls/AbstractCall.qml</file>
     <file>ui/views/App/Calls/Calls.qml</file>
-    <file>ui/views/App/Calls/StartingIncomingCall.qml</file>
-    <file>ui/views/App/Calls/StartingOutgoingCall.qml</file>
+    <file>ui/views/App/Calls/IncomingCall.qml</file>
+    <file>ui/views/App/Calls/OutgoingCall.qml</file>
     <file>ui/views/App/MainWindow/Contact.qml</file>
     <file>ui/views/App/MainWindow/Contacts.qml</file>
     <file>ui/views/App/MainWindow/Conversation.qml</file>
