feat(app): calls views in progress

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -44,6 +44,9 @@
     <file>assets/images/led_red.svg</file>
     <file>assets/images/led_white.svg</file>
     <file>assets/images/linphone.png</file>
+    <file>assets/images/micro_off_hovered.svg</file>
+    <file>assets/images/micro_off_normal.svg</file>
+    <file>assets/images/micro_off_pressed.svg</file>
     <file>assets/images/micro_on_hovered.svg</file>
     <file>assets/images/micro_on_normal.svg</file>
     <file>assets/images/micro_on_pressed.svg</file>
@@ -51,6 +54,9 @@
     <file>assets/images/missed_outgoing_call.svg</file>
     <file>assets/images/outgoing_call.svg</file>
     <file>assets/images/search.svg</file>
+    <file>assets/images/speaker_off_hovered.svg</file>
+    <file>assets/images/speaker_off_normal.svg</file>
+    <file>assets/images/speaker_off_pressed.svg</file>
     <file>assets/images/speaker_on_hovered.svg</file>
     <file>assets/images/speaker_on_normal.svg</file>
     <file>assets/images/speaker_on_pressed.svg</file>
