feat(ui/views/App/MainWindow/ContactEdit): view in progress

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -54,6 +54,9 @@
     <file>assets/images/hangup_hovered.svg</file>
     <file>assets/images/hangup_normal.svg</file>
     <file>assets/images/hangup_pressed.svg</file>
+    <file>assets/images/history_hovered.svg</file>
+    <file>assets/images/history_normal.svg</file>
+    <file>assets/images/history_pressed.svg</file>
     <file>assets/images/history.svg</file>
     <file>assets/images/home_normal.svg</file>
     <file>assets/images/home_selected.svg</file>
@@ -206,7 +209,7 @@
     <file>ui/views/App/Calls/Incall.qml</file>
     <file>ui/views/App/Calls/IncomingCall.qml</file>
     <file>ui/views/App/Calls/OutgoingCall.qml</file>
-    <file>ui/views/App/MainWindow/Contact.qml</file>
+    <file>ui/views/App/MainWindow/ContactEdit.qml</file>
     <file>ui/views/App/MainWindow/Contacts.qml</file>
     <file>ui/views/App/MainWindow/Conversation.qml</file>
     <file>ui/views/App/MainWindow/Home.qml</file>
@@ -215,6 +218,7 @@
     <file>ui/views/App/NewCall.qml</file>
     <file>ui/views/App/qmldir</file>
     <file>ui/views/App/Styles/Calls/StartingCallStyle.qml</file>
+    <file>ui/views/App/Styles/MainWindow/ContactEditStyle.qml</file>
     <file>ui/views/App/Styles/MainWindow/ContactsStyle.qml</file>
     <file>ui/views/App/Styles/MainWindow/ConversationStyle.qml</file>
     <file>ui/views/App/Styles/MainWindow/MainWindowStyle.qml</file>
