--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -36,6 +36,9 @@
     <file>assets/images/chevron_red.svg</file>
     <file>assets/images/chevron_white.svg</file>
     <file>assets/images/collapse.svg</file>
+    <file>assets/images/contact_card_photo_hovered.svg</file>
+    <file>assets/images/contact_card_photo_normal.svg</file>
+    <file>assets/images/contact_card_photo_pressed.svg</file>
     <file>assets/images/contact_edit_hovered.svg</file>
     <file>assets/images/contact_edit_normal.svg</file>
     <file>assets/images/contact_edit_pressed.svg</file>
