feat(ui/views/App/MainWindow/ContactEdit): deal with sip address & urls errors

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -58,6 +58,7 @@
     <file>assets/images/fullscreen_hovered.svg</file>
     <file>assets/images/fullscreen_normal.svg</file>
     <file>assets/images/fullscreen_pressed.svg</file>
+    <file>assets/images/generic_error.svg</file>
     <file>assets/images/hangup_hovered.svg</file>
     <file>assets/images/hangup_normal.svg</file>
     <file>assets/images/hangup_pressed.svg</file>
