feat(src/components/contact/VcardModel): remove property photo if vcard is detached

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -40,6 +40,7 @@
     <file>assets/images/chevron_red.svg</file>
     <file>assets/images/chevron_white.svg</file>
     <file>assets/images/collapse.svg</file>
+    <file>assets/images/contact_card_photo_disabled.svg</file>
     <file>assets/images/contact_card_photo_hovered.svg</file>
     <file>assets/images/contact_card_photo_normal.svg</file>
     <file>assets/images/contact_card_photo_pressed.svg</file>
