--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -134,6 +134,7 @@
     <file>assets/images/video_call_pressed.svg</file>
     <file>ui/modules/Common/Animations/CaterpillarAnimation.qml</file>
     <file>ui/modules/Common/Borders.qml</file>
+    <file>ui/modules/Common/BusyIndicator.qml</file>
     <file>ui/modules/Common/Collapse.qml</file>
     <file>ui/modules/Common/Colors.qml</file>
     <file>ui/modules/Common/Constants.qml</file>
@@ -172,6 +173,7 @@
     <file>ui/modules/Common/SearchBox.qml</file>
     <file>ui/modules/Common/SmartConnect.qml</file>
     <file>ui/modules/Common/Styles/Animations/CaterpillarAnimationStyle.qml</file>
+    <file>ui/modules/Common/Styles/BusyIndicatorStyle.qml</file>
     <file>ui/modules/Common/Styles/CollapseStyle.qml</file>
     <file>ui/modules/Common/Styles/DialogStyle.qml</file>
     <file>ui/modules/Common/Styles/DroppableTextAreaStyle.qml</file>
