feat(app): calls in progress

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -26,6 +26,7 @@
     <file>assets/images/call_quality_2.svg</file>
     <file>assets/images/call_quality_3.svg</file>
     <file>assets/images/call_sign_connected.svg</file>
+    <file>assets/images/call_sign_ended.svg</file>
     <file>assets/images/call_sign_incoming.svg</file>
     <file>assets/images/call_sign_outgoing.svg</file>
     <file>assets/images/call_sign_paused.svg</file>
