feat(app): many fixes on calls (pause, buttons, actions...)

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -80,6 +80,9 @@
     <file>assets/images/fullscreen_hovered.svg</file>
     <file>assets/images/fullscreen_normal.svg</file>
     <file>assets/images/fullscreen_pressed.svg</file>
+    <file>assets/images/generic_error_hovered.svg</file>
+    <file>assets/images/generic_error_normal.svg</file>
+    <file>assets/images/generic_error_pressed.svg</file>
     <file>assets/images/generic_error.svg</file>
     <file>assets/images/hangup_hovered.svg</file>
     <file>assets/images/hangup_normal.svg</file>
